--- a/Index.html
+++ b/Index.html
@@ -109,16 +109,12 @@
           <!-- KNAPPAR -->
 
           <div class="container mt-5">
-            <div class="row text-center">
-              <div class="col">
-                <button type="button" class="btn btn-light">
-                  <a class="nav-link" href="boka-bord.html">Boka bord</a>
-                </button>
+            <div class="row text-center justify-content-center gap-4">
+              <div class="col-4 btn btn-light">
+                <a class="nav-link p-1" href="boka-bord.html">Boka bord</a>
               </div>
-              <div class="col">
-                <button type="button" class="btn btn-light">
-                  <a href="meny.html" class="nav-link">Se vår meny</a>
-                </button>
+              <div class="col-4 btn btn-light">
+                <a href="meny.html" class="nav-link p-1">Se vår meny</a>
               </div>
             </div>
           </div>
