Lägger till en karta på hitta-hit sidan

--- a/hitta-hit.html
+++ b/hitta-hit.html
@@ -89,6 +89,8 @@
           <h1 class="text-uppercase text-center mt-4">Hitta hit</h1>
           <hr />
 
+          <img src="images/karta.webp" alt="En bild på en karta" />
+
           <!-- Avslut för den högra kolumnen -->
         </div>
         <!-- Avslut för den högra kolumnen -->
