--- a/hitta-hit.html
+++ b/hitta-hit.html
@@ -89,7 +89,11 @@
           <h1 class="text-uppercase text-center mt-4">Hitta hit</h1>
           <hr />
 
-          <img src="images/karta.webp" alt="En bild på en karta" />
+          <img
+            src="images/karta.webp"
+            alt="En bild på en karta"
+            style="width: 100%"
+          />
 
           <!-- Avslut för den högra kolumnen -->
         </div>
