--- a/Index.html
+++ b/Index.html
@@ -126,14 +126,12 @@
             <p>Lunchservering</p>
             <p>Måndag - Fredag<br />11:00 - 14:00</p>
             <p>À la carte, Middagsservering</p>
-            <p>
-              Måndag - Torsdag<br />
-              16:30 - 22:00<br />
-              Fredag & Lördag<br />
-              16:30 - 23:00<br />
-              Söndag<br />
-              STÄNGT
-            </p>
+            <p class="mb-0">Måndag - Torsdag</p>
+            <p class="mb-0">16:30 - 22:00</p>
+            <p class="mb-0">Fredag & Lördag</p>
+            <p class="mb-0">16:30 - 23:00</p>
+            <p class="mb-0">Söndag</p>
+            <p>STÄNGT</p>
             <p>Full meny serveras fram till 21:30 Måndag – Lördag</p>
             <p>Hjärtligt välkomna!</p>
           </div>
@@ -161,13 +159,16 @@
       <div class="row my-5">
         <div class="col-12 col-md-6 text-center align-self-center">
           <h5 class="text-uppercase">Lunch</h5>
-          <p>
-            Tisdag vecka 41 <br />
+          <p class="mb-0">Tisdag vecka 41</p>
+          <p class="mb-0">
             • Laxfile i ugn med teriyaki, lime, sweet chili, sesamolja. Kokt
-            potatis <br />
-            • Kalvlever anglaise, gräddsås, kokt potatis, lingonsylt <br />
-            • Pasta med salsiccia, tomatsås, chili, paprika, parmesan <br />
+            potatis
           </p>
+          <p class="mb-0">
+            • Kalvlever anglaise, gräddsås, kokt potatis, lingonsylt
+          </p>
+          <p>• Pasta med salsiccia, tomatsås, chili, paprika, parmesan</p>
+
           <p>
             Vi serverar även Pizza, Lasagne och Pasta Bolognese alla dagar. Till
             lunchen ingår sallad, dryck och kaffe.Pris: 155:- / 1 450:-
@@ -197,12 +198,10 @@
         <div class="row justify-content-center">
           <div class="col-6 col-sm-5 col-md-3 mb-3">
             <h5 class="text-uppercase">La Bella Italia</h5>
-            <p>
-              Gatanvägen 12<br />
-              786 65 Staden<br />
-              info@labellaitalia.se<br />
-              (+46)073-125 47 89
-            </p>
+            <p class="mb-0">Gatanvägen 12</p>
+            <p class="mb-0">786 65 Staden</p>
+            <p class="mb-0">info@labellaitalia.se</p>
+            <p>(+46)073-125 47 89</p>
           </div>
 
           <!-- Länkar -->
