--- a/hitta-hit.html
+++ b/hitta-hit.html
@@ -90,10 +90,25 @@
           <hr />
 
           <img
+            class="py-3"
             src="images/karta.webp"
             alt="En bild på en karta"
             style="width: 100%"
           />
+
+          <p class="pt-3 text-center mb-0">Gatanvägen 12</p>
+          <p class="text-center">786 65 Staden</p>
+
+          <div class="container mt-5">
+            <div class="row text-center justify-content-center gap-4">
+              <div class="col-4 btn btn-light">
+                <a class="nav-link p-1" href="boka-bord.html">Boka bord</a>
+              </div>
+              <div class="col-4 btn btn-light">
+                <a href="meny.html" class="nav-link p-1">Se vår meny</a>
+              </div>
+            </div>
+          </div>
 
           <!-- Avslut för den högra kolumnen -->
         </div>
@@ -121,12 +136,10 @@
         <div class="row justify-content-center">
           <div class="col-6 col-sm-5 col-md-3 mb-3">
             <h5 class="text-uppercase">La Bella Italia</h5>
-            <p>
-              Gatanvägen 12<br />
-              786 65 Staden<br />
-              info@labellaitalia.se<br />
-              (+46)073-125 47 89
-            </p>
+            <p class="mb-0">Gatanvägen 12</p>
+            <p class="mb-0">786 65 Staden</p>
+            <p class="mb-0">info@labellaitalia.se</p>
+            <p>(+46)073-125 47 89</p>
           </div>
 
           <!-- Länkar -->
