--- a/meny.html
+++ b/meny.html
@@ -763,12 +763,10 @@
         <div class="row justify-content-center">
           <div class="col-6 col-sm-5 col-md-3 mb-3">
             <h5 class="text-uppercase">La Bella Italia</h5>
-            <p>
-              Gatanvägen 12<br />
-              786 65 Staden<br />
-              info@labellaitalia.se<br />
-              (+46)073-125 47 89
-            </p>
+            <p class="mb-0">Gatanvägen 12</p>
+            <p class="mb-0">786 65 Staden</p>
+            <p class="mb-0">info@labellaitalia.se</p>
+            <p>(+46)073-125 47 89</p>
           </div>
 
           <!-- Länkar -->
