--- a/meny.html
+++ b/meny.html
@@ -129,7 +129,7 @@
               <div class="collapse" id="collapseAntipasti">
                 <div class="card card-body">
                   <!-- Rätt 1 -->
-                  <h6 class="mb-0">CAPESANTE GRATINATE</h6>
+                  <h6 class="mb-0 pt-3">CAPESANTE GRATINATE</h6>
                   <p class="mb-0">
                     Gratinerad pilgrimsmussla med västerbottenssmör, panko och
                     regnbågsrom.
@@ -184,7 +184,7 @@
                   <p class="fs-6 fst-italic mb-0">
                     //Mixed italian cold cuts and chees.
                   </p>
-                  <p class="mb-4">Pris: 180:-</p>
+                  <p>Pris: 180:-</p>
                 </div>
               </div>
 
@@ -221,7 +221,7 @@
                 <div class="collapse" id="collapseContorini">
                   <div class="card card-body">
                     <!-- Rätt 1 -->
-                    <h6 class="mb-0">CAPESANTE GRATINATE</h6>
+                    <h6 class="mb-0 pt-3">CAPESANTE GRATINATE</h6>
                     <p class="mb-0">
                       Gratinerad pilgrimsmussla med västerbottenssmör, panko och
                       regnbågsrom.
@@ -276,7 +276,7 @@
                     <p class="fs-6 fst-italic mb-0">
                       //Mixed italian cold cuts and chees.
                     </p>
-                    <p class="mb-4">Pris: 180:-</p>
+                    <p>Pris: 180:-</p>
                   </div>
                 </div>
               </div>
@@ -313,7 +313,7 @@
                 <div class="collapse" id="collapsePizza">
                   <div class="card card-body">
                     <!-- Rätt 1 -->
-                    <h6 class="mb-0">MARGERITA</h6>
+                    <h6 class="mb-0 pt-3">MARGERITA</h6>
                     <p class="mb-0">Tomat & ost</p>
                     <p class="fs-6 fst-italic mb-0">//Tomato and cheese</p>
                     <p class="mb-4">Pris: 145:-</p>
@@ -464,7 +464,7 @@
                       //Tomato, cheese, fillet of beef, onion and bearnaise
                       sauce
                     </p>
-                    <p class="mb-4">Pris: 230:-</p>
+                    <p>Pris: 230:-</p>
                   </div>
                 </div>
               </div>
@@ -500,7 +500,7 @@
                 <div class="collapse" id="collapsePasta">
                   <div class="card card-body">
                     <!-- Rätt 1 -->
-                    <h6 class="mb-0">LASAGNE AL FORNO</h6>
+                    <h6 class="mb-0 pt-3">LASAGNE AL FORNO</h6>
                     <p class="mb-0">Klassisk lasagne med köttfärssås.</p>
                     <p class="fs-6 fst-italic mb-0">
                       //Classic lasagna with minced meat sauce.
@@ -566,7 +566,7 @@
                       //Pasta with tomato sauce, scampi (MSC), mussels, onion,
                       garlic, chili and parsley.
                     </p>
-                    <p class="mb-4">Pris: 265:-</p>
+                    <p>Pris: 265:-</p>
                   </div>
                 </div>
               </div>
@@ -602,7 +602,7 @@
                 <div class="collapse" id="collapseSecondi">
                   <div class="card card-body">
                     <!-- Rätt 1 -->
-                    <h6 class="mb-0">INSALATA CAESAR</h6>
+                    <h6 class="mb-0 pt-2">INSALATA CAESAR</h6>
                     <p class="mb-0">
                       Caesarsallad med kyckling, soltorkade tomater, dressing,
                       citron, brödkrutonger och parmesanost.
@@ -644,7 +644,7 @@
                       gratinated stuffed potato with cheese and salsiccia.
                       Haricots verts and tomato.
                     </p>
-                    <p class="mb-4">Pris: 345:-</p>
+                    <p>Pris: 345:-</p>
                   </div>
                 </div>
               </div>
@@ -680,7 +680,7 @@
                 <div class="collapse" id="collapseDolci">
                   <div class="card card-body">
                     <!-- Rätt 1 -->
-                    <h6 class="mb-0">GELATO E SORBETTO</h6>
+                    <h6 class="mb-0 pt-3">GELATO E SORBETTO</h6>
                     <p class="mb-0">Glass och sorbet.</p>
                     <p class="fs-6 fst-italic mb-0">
                       //Choose between ice cream and sorbet.
@@ -729,7 +729,7 @@
                       Klassisk crème brûlée med smak av vanilj.
                     </p>
                     <p class="fs-6 fst-italic mb-0">//Vanilla crème brûlée.</p>
-                    <p class="mb-4">Pris: 125:-</p>
+                    <p>Pris: 125:-</p>
                   </div>
                 </div>
               </div>
@@ -775,20 +775,37 @@
             <h5>Länkar</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Meny</a>
+                <a href="meny.html" class="nav-link p-0 text-body-secondary"
+                  >Meny</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Viner</a>
+                <a href="viner.html" class="nav-link p-0 text-body-secondary"
+                  >Viner</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Om oss</a>
+                <a href="om-oss.html" class="nav-link p-0 text-body-secondary"
+                  >Om oss</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Kontakt</a>
+                <a href="kontakt.html" class="nav-link p-0 text-body-secondary"
+                  >Kontakt</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
+                <a
+                  href="hitta-hit.html"
+                  class="nav-link p-0 text-body-secondary"
                   >Hitta hit</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a
+                  href="boka-bord.html"
+                  class="nav-link p-0 text-body-secondary"
+                  >Boka Bord</a
                 >
               </li>
             </ul>
