--- a/om-oss.html
+++ b/om-oss.html
@@ -167,27 +167,37 @@
             <h5>Länkar</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
-                <a
-                  href="boka-bord.html"
-                  class="nav-link p-0 text-body-secondary"
-                  >Boka bord</a
+                <a href="meny.html" class="nav-link p-0 text-body-secondary"
+                  >Meny</a
                 >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Meny</a>
+                <a href="viner.html" class="nav-link p-0 text-body-secondary"
+                  >Viner</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Viner</a>
+                <a href="om-oss.html" class="nav-link p-0 text-body-secondary"
+                  >Om oss</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Om oss</a>
+                <a href="kontakt.html" class="nav-link p-0 text-body-secondary"
+                  >Kontakt</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Kontakt</a>
-              </li>
-              <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
+                <a
+                  href="hitta-hit.html"
+                  class="nav-link p-0 text-body-secondary"
                   >Hitta hit</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a
+                  href="boka-bord.html"
+                  class="nav-link p-0 text-body-secondary"
+                  >Boka Bord</a
                 >
               </li>
             </ul>
