--- a/hitta-hit.html
+++ b/hitta-hit.html
@@ -99,7 +99,7 @@
           <p class="pt-3 text-center mb-0">Gatanvägen 12</p>
           <p class="text-center">786 65 Staden</p>
 
-          <div class="container mt-5">
+          <div class="container my-5">
             <div class="row text-center justify-content-center gap-4">
               <div class="col-4 btn btn-light">
                 <a class="nav-link p-1" href="boka-bord.html">Boka bord</a>
@@ -148,20 +148,37 @@
             <h5>Länkar</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Meny</a>
+                <a href="meny.html" class="nav-link p-0 text-body-secondary"
+                  >Meny</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Viner</a>
+                <a href="viner.html" class="nav-link p-0 text-body-secondary"
+                  >Viner</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Om oss</a>
+                <a href="om-oss.html" class="nav-link p-0 text-body-secondary"
+                  >Om oss</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Kontakt</a>
+                <a href="kontakt.html" class="nav-link p-0 text-body-secondary"
+                  >Kontakt</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
+                <a
+                  href="hitta-hit.html"
+                  class="nav-link p-0 text-body-secondary"
                   >Hitta hit</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a
+                  href="boka-bord.html"
+                  class="nav-link p-0 text-body-secondary"
+                  >Boka Bord</a
                 >
               </li>
             </ul>
