--- a/viner.html
+++ b/viner.html
@@ -132,7 +132,7 @@
               <div class="collapse" id="collapseMousserade">
                 <div class="card card-body">
                   <!-- Vin 1 -->
-                  <h6 class="mb-0">
+                  <h6 class="mb-0 pt-3">
                     Riva dei Frati Prosecco Valdobbiadene Superiore Veneto
                   </h6>
                   <p class="mb-4">Pris: 95:- / <i>435:-</i></p>
@@ -152,7 +152,7 @@
                     Franciacorta Bellavista Grande Cuvée Brut Lombardiet
                   </h6>
 
-                  <p class="mb-4">Pris: <i>895:-</i></p>
+                  <p>Pris: <i>895:-</i></p>
                 </div>
               </div>
 
@@ -189,7 +189,7 @@
                 <div class="collapse" id="collapseVita">
                   <div class="card card-body">
                     <!-- Rätt 1 -->
-                    <h6 class="mb-0">
+                    <h6 class="mb-0 pt-3">
                       Villa Saporito Bianco (Catarratto) Sicilien
                     </h6>
 
@@ -260,7 +260,7 @@
                       Villa Canestrari Soave Superiore (Garganega) Veneto
                     </h6>
 
-                    <p class="mb-4">Pris:<i> 560:-</i></p>
+                    <p>Pris:<i> 560:-</i></p>
                   </div>
                 </div>
               </div>
@@ -299,7 +299,7 @@
                 <div class="collapse" id="collapseRoda">
                   <div class="card card-body">
                     <!-- Rätt 1 -->
-                    <h6 class="mb-0">
+                    <h6 class="mb-0 pt-3">
                       Villa Saporito Rosso (Nero d'Avola) Sicilien
                     </h6>
 
@@ -367,7 +367,7 @@
                     <!-- Rätt 10 -->
                     <h6 class="mb-0">Santadi Noras (Cannonau) Sardinien</h6>
 
-                    <p class="mb-4">Pris: 129:- /<i> 645:-</i></p>
+                    <p>Pris: 129:- /<i> 645:-</i></p>
                   </div>
                 </div>
               </div>
@@ -415,20 +415,37 @@
             <h5>Länkar</h5>
             <ul class="nav flex-column">
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Meny</a>
+                <a href="meny.html" class="nav-link p-0 text-body-secondary"
+                  >Meny</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Viner</a>
+                <a href="viner.html" class="nav-link p-0 text-body-secondary"
+                  >Viner</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Om oss</a>
+                <a href="om-oss.html" class="nav-link p-0 text-body-secondary"
+                  >Om oss</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary">Kontakt</a>
+                <a href="kontakt.html" class="nav-link p-0 text-body-secondary"
+                  >Kontakt</a
+                >
               </li>
               <li class="nav-item mb-2">
-                <a href="#" class="nav-link p-0 text-body-secondary"
+                <a
+                  href="hitta-hit.html"
+                  class="nav-link p-0 text-body-secondary"
                   >Hitta hit</a
+                >
+              </li>
+              <li class="nav-item mb-2">
+                <a
+                  href="boka-bord.html"
+                  class="nav-link p-0 text-body-secondary"
+                  >Boka Bord</a
                 >
               </li>
             </ul>
