--- a/Index.html
+++ b/Index.html
@@ -195,7 +195,7 @@
 
     <div class="container-fluid footer--bg flex-wrap">
       <footer class="py-5 px-4">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center footer-row">
           <div class="col-6 col-sm-5 col-md-3 mb-3">
             <h5 class="text-uppercase">La Bella Italia</h5>
             <p class="mb-0">Gatanvägen 12</p>
