--- a/boka-bord.html
+++ b/boka-bord.html
@@ -57,7 +57,7 @@
                       <ul class="dropdown-menu">
                         <li>
                           <a
-                            class="dropdown-item active"
+                            class="dropdown-item"
                             aria-current="page"
                             href="om-oss.html"
                             >Om oss</a
@@ -74,7 +74,7 @@
                           >
                         </li>
                         <li>
-                          <a class="dropdown-item" href="boka-bord.html"
+                          <a class="dropdown-item active" href="boka-bord.html"
                             >Boka bord</a
                           >
                         </li>
@@ -214,8 +214,8 @@
 
     <div class="container-fluid footer--bg flex-wrap">
       <footer class="py-5 px-4">
-        <div class="row justify-content-center">
-          <div class="col-6 col-sm-5 col-md-3 mb-3">
+        <div class="row justify-content-center footer-row">
+          <div class="col col-sm-5 col-md-3 mb-3">
             <h5 class="text-uppercase">La Bella Italia</h5>
             <p class="mb-0">Gatanvägen 12</p>
             <p class="mb-0">786 65 Staden</p>
