--- a/meny.html
+++ b/meny.html
@@ -602,7 +602,7 @@
                 <div class="collapse" id="collapseSecondi">
                   <div class="card card-body">
                     <!-- Rätt 1 -->
-                    <h6 class="mb-0 pt-2">INSALATA CAESAR</h6>
+                    <h6 class="mb-0 pt-3">INSALATA CAESAR</h6>
                     <p class="mb-0">
                       Caesarsallad med kyckling, soltorkade tomater, dressing,
                       citron, brödkrutonger och parmesanost.
@@ -760,7 +760,7 @@
 
     <div class="container-fluid footer--bg flex-wrap">
       <footer class="py-5 px-4">
-        <div class="row justify-content-center">
+        <div class="row justify-content-center footer-row">
           <div class="col-6 col-sm-5 col-md-3 mb-3">
             <h5 class="text-uppercase">La Bella Italia</h5>
             <p class="mb-0">Gatanvägen 12</p>
