ändrar index-sökvägen

--- a/meny.html
+++ b/meny.html
@@ -40,7 +40,7 @@
                   <ul class="navbar-nav">
                     <li class="nav-item">
                       <!-- Länk 1 -->
-                      <a class="nav-link" href="Index.html">Hem</a>
+                      <a class="nav-link" href="index.html">Hem</a>
                     </li>
                     <li class="nav-item">
                       <!-- Länk 2 -->
