--- a/Index.html
+++ b/Index.html
@@ -41,7 +41,7 @@
                       <a
                         class="nav-link active"
                         aria-current="page"
-                        href="Index.html"
+                        href="index.html"
                         >Hem</a
                       >
                     </li>
