--- a/kontakt.html
+++ b/kontakt.html
@@ -38,7 +38,7 @@
                 >
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="Index.html">Hem</a>
+                      <a class="nav-link" href="index.html">Hem</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="meny.html">Meny</a>
