--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      $(document).ready(function () {
+        $("a")
+          .mouseenter(function () {
+            $(this).css("font-size", "20px")
+          })
+          .mouseleave(function () {
+            $(this).css("font-size", "")
+          })
+      })
+    </script>
     <title>La Bella Italia</title>
   </head>
   <body>
