--- a/om-oss.html
+++ b/om-oss.html
@@ -10,6 +10,24 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
+    <script>
+      $(document).ready(function () {
+        $("a")
+          .mouseenter(function () {
+            $(this).css("font-size", "20px")
+          })
+          .mouseleave(function () {
+            $(this).css("font-size", "")
+          })
+
+        $("#omOssBild").animate({ opacity: 1 }, 2000)
+      })
+    </script>
     <title>La Bella Italia</title>
   </head>
   <body>
@@ -127,6 +145,7 @@
 
           <div class="container my-5 d-none d-lg-block">
             <img
+              id="omOssBild"
               src="images/staff.jpg"
               style="width: 100%"
               class="home__thumbnail"
